@@ -391,10 +391,19 @@ void opd_handle_kernel_sample(unsigned long eip, u32 counter)
 }
  
 
+#define KERNEL_OFFSET 0xC0000000
+
 int opd_eip_is_kernel(unsigned long eip)
 {
-	/* kernel_start == 0 when vm_nolinux != 0 */
-	return kernel_start && eip >= kernel_start;
+	/*
+	 * kernel_start == 0 when using --no-vmlinux.
+	 * This is wrong, wrong, wrong, wrong, but we don't have much
+	 * choice. It obviously breaks for IA64.
+	 */
+	if (!kernel_start)
+		return eip >= KERNEL_OFFSET;
+
+	return eip >= kernel_start;
 }
 
 
